# Capability-Cartography-Layer-2-IFME

./: .gitignore  IFME_N_LOCK.md  README.md  TAO_ASSESSMENT.md  pyproject.toml
capability_cartography/: __init__.py  adapters.py  agent_integration.py  demo.py  ifme.py  orchestration.py  schemas.py
tests/: test_capability_cartography.py
