[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capability-cartography-layer-2-ifme"
version = "0.2.0"
description = "An IFME-focused successor to Capability Cartography Layer 2 with data-driven n-lock analysis over measured capability cartography artifacts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Paul \"The Pageman\" Pajo" }
]
dependencies = [
  "matplotlib",
  "numpy",
  "PyYAML"
]

[tool.setuptools.packages.find]
where = ["."]
